<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mydearmechanic.ui.home.HomeFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.mydearmechanic.ui.gallery.GalleryFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.mydearmechanic.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_service"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.mydearmechanic.ui.AboutUsFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_share"
        android:name="com.mydearmechanic.ui.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />
    <fragment
        android:id="@+id/nav_rules"
        android:name="com.mydearmechanic.ui.RulesRegulationFragment"
        android:label="@string/menu_rules"
        tools:layout="@layout/fragment_rules_regulation" />
    <fragment
        android:id="@+id/nav_language"
        android:name="com.mydearmechanic.ui.LanguageFragment"
        android:label="@string/menu_language"
        tools:layout="@layout/fragment_language" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.mydearmechanic.ui.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />


</navigation>